# zq

./: .codecov.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  deny.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/badges/: coverage.json
.github/workflows/: ci.yml  release.yml
assets/yaml_anchor/: canonical_common.tsv  canonical_common.tsv.zst  canonical_strict.tsv  canonical_strict.tsv.zst  stopwords_common.txt  stopwords_common.txt.zst  stopwords_strict.txt  stopwords_strict.txt.zst
bench/: README.md  cases.tsv  gen_data_ndjson.sh  profile_each_case.sh  run_stdin_bench.sh
benches/: native_engine.rs  parsing.rs
crates/jaq-all/: Cargo.toml
crates/jaq-all/src/: load.rs
crates/jaq-core/: Cargo.toml
crates/jaq-core/src/: compile.rs  exn.rs  filter.rs  stack.rs  val.rs
crates/jaq-core/src/load/: lex.rs  mod.rs  parse.rs
crates/jaq-core/tests/: tests.rs
crates/jaq-fmts/: Cargo.toml
crates/jaq-fmts/src/read/: cbor.rs
crates/jaq-json/: Cargo.toml
crates/jaq-json/src/: funs.rs  lib.rs  num.rs  read.rs  write.rs
crates/jaq-json/tests/: funs.rs
crates/jaq-std/: Cargo.toml
crates/jaq-std/src/: defs.jq  input.rs  lib.rs  regex.rs  time.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  RELEASE.md  SECURITY.md  cli.md  new-core-migration.md
packaging/windows/: zq_installer.nsi
scripts/: public_api_smoke.sh
src/: cli.rs  engine.rs  fixtures_jq171_extra.inc  fixtures_jq_1001_80.inc  fixtures_jq_290_294.inc  fixtures_jq_295_307.inc  fixtures_jq_308_319.inc  fixtures_jq_320_363.inc  fixtures_jq_364_391.inc  fixtures_jq_403_433.inc  fixtures_jq_434_445.inc  fixtures_jq_475_479.inc  fixtures_jq_487_492.inc  fixtures_jq_506_519.inc  fixtures_jq_remaining_compile.inc  fixtures_man171_extra.inc  fixtures_man_fail_183.inc  fixtures_manonig_all.inc  fixtures_onig_all.inc  fixtures_optional_extra.inc  jq_prelude.jq  lib.rs  main.rs  native_engine.rs  query.rs  query_native.rs  service.rs  value.rs  yamlmerge.rs
src/c_compat/: container.rs  json.rs  math.rs  mod.rs  string.rs  time.rs  value.rs  yaml.rs
src/engine/: tests.rs  yaml_output.rs
src/native_engine/: doc_tape.rs  json_fast_path.rs  tests.rs
src/native_engine/vm_core/: ast.rs  ir.rs  lexer.rs  mod.rs  parser.rs  tests.rs  vm.rs
src/native_engine/vm_core/parser/: builtin_lowering.rs  literal_utils.rs  module_directives.rs  module_loading.rs  module_resolve.rs  stage_helpers.rs  symbol_rewrite.rs  symbol_table.rs
src/native_engine/vm_core/test_modules/: m.jq  raw.json
src/native_engine/vm_core/test_modules/linker/: shadow1.jq
src/native_engine/vm_core/test_modules/module_stub/: alpha.jq
src/native_engine/vm_core/test_modules/module_stub/module/: path.jq
src/native_engine/vm_core/test_modules/modulemeta/: c.jq
src/native_engine/vm_core/test_modules/modulemeta_upstream/: c.jq
src/native_engine/vm_core/test_modules/search/: alt.jq
src/native_engine/vm_core/vm/: builtins.rs  path_ops.rs  regex_ops.rs  stream_ops.rs  tests.rs
src/query_native/: csv_input.rs  jsonish.rs  test_support.rs  xml_input.rs
src/service/: cli_compat.rs  diff_mode.rs  input_resolve.rs  json_color.rs  json_stream.rs  native_json_output.rs  output_colorize.rs  output_formats.rs  output_xml.rs  run_tests.rs  semantic_diff.rs  spool.rs  tests.rs  text_utils.rs
tests/: format_stability.rs  hardcode_guard.rs  hardcode_guard_clusters.rs  jq_help_parity.rs  jq_oracle_baseline.rs  jq_upstream.rs  library_api.rs  native_stream_api.rs  native_stream_text_api.rs  native_yaml_output.rs  parity_cli.rs  parser_robustness.rs  public_api_stability.rs  run_tests_mode.rs
tests/common/: c_numeric.rs
tests/compat/: jq-cases.yaml  jq_help.test  jq_oracle_hardcode.json  yq-cases.yaml  yq-yaml-spec-issues.yaml
tests/fixtures/modules/: b.jq  data.json  test_bind_order.jq  test_bind_order1.jq
tests/parity/fixtures/: valid-values.yaml
