[package]
name = "zq"
version = "1.5.1"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
description = "Standalone jq-compatible query engine with JSON/YAML/TOML/CSV/XML input and output"
repository = "https://github.com/alvnukov/zq"
homepage = "https://github.com/alvnukov/zq"
readme = "README.md"
keywords = ["jq", "json", "yaml", "toml", "cli"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = { package = "serde_norway", version = "0.9.42" }
serde_json = { version = "1", features = ["preserve_order", "arbitrary_precision", "unbounded_depth"] }
serde_stacker = "0.1"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
fancy-regex = "0.14"
rayon = "1"
base64 = "0.22"
memmap2 = "0.9"
libc = "0.2"
toml = "0.8"
csv = "1.3"
roxmltree = "0.20"
fs2 = "0.4"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "native_engine"
harness = false

[[bench]]
name = "parsing"
harness = false

[package.metadata.deb]
maintainer = "alvnukov"
copyright = "2026, alvnukov"
section = "utils"
priority = "optional"
assets = [
  ["target/release/zq", "usr/bin/zq", "755"],
  ["README.md", "usr/share/doc/zq/README.md", "644"],
  ["LICENSE", "usr/share/doc/zq/LICENSE", "644"],
]

[package.metadata.generate-rpm]
summary = "Standalone jq-compatible query engine"
auto-req = "auto"
assets = [
  { source = "target/release/zq", dest = "/usr/bin/zq", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/zq/README.md", mode = "644", doc = true },
  { source = "LICENSE", dest = "/usr/share/doc/zq/LICENSE", mode = "644", doc = true },
]
