[package]
name = "jaq-all"
version = "0.1.0-beta"
edition = "2021"
rust-version = "1.70"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
license = "MIT"
readme = "README.md"
description = "Run & compile jq filters and read & write data"
repository = "https://github.com/alvnukov/zq"
keywords = ["jq"]

[features]
default = ["formats"]
formats = ["jaq-fmts/all"]

[dependencies]
jaq-core = { path = "../jaq-core" }
jaq-std = { path = "../jaq-std" }
jaq-json = { path = "../jaq-json" }
jaq-fmts = { path = "../jaq-fmts" }

codesnake = "0.2"
unicode-width = "0.1.13"

[dev-dependencies]
serde_json = "1.0"
