[package]
name = "jaq-fmts"
version = "0.1.0-beta"
edition = "2021"
rust-version = "1.70"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
license = "MIT"
readme = "README.md"
description = "Multi-format support for jaq"
repository = "https://github.com/alvnukov/zq"
keywords = ["jq"]

[features]
default = ["all"]
all = ["cbor", "toml", "xml", "yaml"]

cbor = ["ciborium-ll", "ciborium-io"]
toml = ["toml_edit"]
xml = ["xmlparser"]
yaml = ["saphyr-parser", "base64"]

[dependencies]
jaq-core = { path = "../jaq-core" }
jaq-std = { path = "../jaq-std" }
jaq-json = { path = "../jaq-json" }

bstr = "1"
bytes = "1.10.1"
memmap2 = "0.9"
num-bigint = { version = "0.4.6", default-features = false }

base64 = { version = "0.22", optional = true }
ciborium-io = { version = "0.2.2", optional = true, features = ["std"] }
ciborium-ll = { version = "0.2.2", optional = true }
saphyr-parser = { version = "0.0.6", optional = true }
toml_edit = { version = "0.23.2", optional = true }
xmlparser = { version = "0.13.6", optional = true }

[dev-dependencies]
serde_json = "1.0"
jaq-json = { path = "../jaq-json", features = ["serde"] }
