[package]
name = "jaq-json"
version = "2.0.0-beta"
edition = "2021"
rust-version = "1.70"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
license = "MIT"
readme = "README.md"
description = "JSON values for jaq"
repository = "https://github.com/alvnukov/zq"
keywords = ["json", "query", "jq"]
categories = ["data-structures"]

[features]
default = ["std"]
sync = []
std = ["hifijson/std", "dep:stacker"]

[dependencies]
jaq-core = { path = "../jaq-core" }
jaq-std = { path = "../jaq-std" }

bstr = "1"
bytes = "1"
foldhash = { version = "0.1", default-features = false }
hifijson = { version = "0.4.0", default-features = false, features = ["alloc"] }
indexmap = { version = "2.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ryu = "1.0.20"
self_cell = "1.2.0"
serde = { version = "1.0.81", default-features = false, features = ["alloc"], optional = true }
stacker = { version = "0.1.22", optional = true }

[[test]]
name = "defs"
path = "tests/defs.rs"
required-features = ["serde"]

[[test]]
name = "funs"
path = "tests/funs.rs"
required-features = ["serde"]

[dev-dependencies]
serde_json = "1.0"
